<resources>
    <string name="app_name">Personal Library</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    
    <!-- Book Scanner strings -->
    <string name="no_books_message">No books. Press the + button to add your first book.</string>
    <string name="book_cover">Book cover</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="loading_data">Loading data…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="take_photo">Take photo</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="published_date">Published date</string>
    <string name="description">Description</string>
    <string name="isbn">ISBN</string>
    <string name="book_not_found">Book not found</string>
    <string name="manual_entry">Enter data manually</string>
    <string name="export_csv">Export to CSV</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_author">Enter author</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="enter_publisher">Enter publisher</string>
    <string name="enter_published_date">Enter published date</string>
    <string name="export_pdf">Export to PDF</string>
    <string name="enter_description">Enter description</string>
    <string name="navigation_error">Navigation error</string>
    <string name="no_books_to_export">No books to export</string>
    <string name="export_completed">Export completed</string>
    <string name="export_pdf_completed">PDF export completed</string>
    <string name="export_error">Export error: %1$s</string>
    <string name="delete_book">Delete book</string>
    <string name="delete_book_confirmation">Are you sure you want to delete this book?</string>
    <string name="delete">Delete</string>
    <string name="no_title">No title</string>
    <string name="no_author">No author</string>
    <string name="camera_init_error">Camera initialization error</string>
    <string name="camera_start_error">Camera start error</string>
    <string name="photo_save_error">Photo save error</string>
    <string name="photo_capture_error">Photo capture error: %1$s</string>
    <string name="photo_saved">Photo saved</string>
    <string name="no_data_to_save">No data to save</string>
    <string name="book_saved">Book saved</string>
    <string name="no_isbn">No ISBN number</string>
    <string name="book_not_found_by_isbn">Book not found with the given ISBN</string>
</resources>