<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/bookListFragment">

    <fragment
        android:id="@+id/bookListFragment"
        android:name="pl.fairydeck.bookscanner.ui.booklist.BookListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_book_list">

        <action
            android:id="@+id/action_bookListFragment_to_scannerFragment"
            app:destination="@id/scannerFragment" />

        <action
            android:id="@+id/action_bookListFragment_to_bookDetailsFragment"
            app:destination="@id/bookDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/scannerFragment"
        android:name="pl.fairydeck.bookscanner.ui.scanner.ScannerFragment"
        android:label="@string/scan_barcode"
        tools:layout="@layout/fragment_scanner">

        <action
            android:id="@+id/action_scannerFragment_to_loadingFragment"
            app:destination="@id/loadingFragment" />

        <action
            android:id="@+id/action_scannerFragment_to_bookListFragment"
            app:destination="@id/bookListFragment"
            app:popUpTo="@id/bookListFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loadingFragment"
        android:name="pl.fairydeck.bookscanner.ui.loading.LoadingFragment"
        android:label="@string/loading_data"
        tools:layout="@layout/fragment_loading">

        <argument
            android:name="isbn"
            app:argType="string" />

        <action
            android:id="@+id/action_loadingFragment_to_bookDetailsFragment"
            app:destination="@id/bookDetailsFragment"
            app:popUpTo="@id/loadingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/bookDetailsFragment"
        android:name="pl.fairydeck.bookscanner.ui.bookdetails.BookDetailsFragment"
        android:label="@null"
        tools:layout="@layout/fragment_book_details">

        <argument
            android:name="bookId"
            app:argType="long"
            android:defaultValue="0L" />

        <argument
            android:name="isbn"
            app:argType="string"
            android:defaultValue="" />

        <argument
            android:name="manualEntry"
            app:argType="boolean"
            android:defaultValue="false" />

        <action
            android:id="@+id/action_bookDetailsFragment_to_scannerFragment"
            app:destination="@id/scannerFragment"
            app:popUpTo="@id/scannerFragment"
            app:popUpToInclusive="false" />
        
        <action
            android:id="@+id/action_bookDetailsFragment_to_bookListFragment"
            app:destination="@id/bookListFragment"
            app:popUpTo="@id/bookListFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
